@@ -1,13 +1,13 @@
 Package: tm
 Title: Text Mining Package
 Version: 0.5-9.3
-Date: 2013-08-18
+Date: 2013-08-19
 Authors@R: c(person("Ingo", "Feinerer", role = c("aut", "cre"),
                     email = "feinerer@logic.at"),
              person("Kurt", "Hornik", role = "aut"),
              person("Artifex Software, Inc.", role = c("ctb", "cph"),
                     comment = "pdf_info.ps taken from GPL Ghostscript"))
-Depends: R (>= 2.14.0), methods
+Depends: R (>= 2.14.0)
 Imports: parallel, slam (>= 0.1-22)
 Suggests: filehash, proxy, Rgraphviz, SnowballC, XML
 SystemRequirements: Antiword (http://www.winfield.demon.nl/) for reading MS Word files,
